@@ -32,7 +32,8 @@
  *          not affect VM global state, so othervm is not required.
  * @modules jdk.rmic/sun.rmi.rmic
  *          jdk.rmic/sun.tools.java
- * @run main RMICClassPathTest
+ * @compile -addmods jdk.rmic RMICClassPathTest.java
+ * @run main/othervm --add-modules=jdk.rmic RMICClassPathTest
  */
 
 import java.io.File;
